fixed issue overlapping with floating bar - component now goes to center at 1100px

--- a/sass/components/_heroEvent.scss
+++ b/sass/components/_heroEvent.scss
@@ -9,7 +9,7 @@
 		color: $white;
 	}
 
-	@media screen and (max-width: 1000px) {
+	@media screen and (max-width: 1100px) {
 		left: 0;
 		right: 0;
 		top: 180px;
